tests/misc/t12480.nim
discard """
  errormsg: "'return' not allowed here"
"""

return